<resources>
    <string name="app_name">PhotoMathSolver</string>
    <string name="photo">Photo</string>
    <string name="crop">Crop Image</string>
    <string name="solve">Solve</string>
    <string name="scan_photo">Scan Photo</string>
    <string name="image_of_formula">Image Of Formula</string>
    <string name="update_image">Update Image</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="loading_process">Image processing. Please, wait…</string>
    <string name="failed_to_load_formulas">Failed to load formulas from database</string>
    <string name="scanned_photos">Scanned photos</string>
    <string name="select_image">Select image</string>
    <string name="failed_to_load_formula">Failed to scan formula</string>
    <string name="failed_to_take_a_photo">Failed to take a photo</string>
    <string name="loading_formulas">Loading formulas…</string>
    <string name="your_scanned_photos_will_be_stored_here">Your scanned photos will be stored here</string>
    <string name="loading_image">Loading image…</string>
    <string name="solving">Solving…</string>
    <string name="failed_to_load_image">Failed to load image for formula</string>
    <string name="delete_all">Delete All</string>
</resources>
