<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rectangle"
        android:contentDescription="@string/photo" />

    <RelativeLayout
        android:id="@+id/relative_layout_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progress_bar"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/default_padding"
            android:text="@string/loading_process"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_crop"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/design_default_color_primary"
        app:fabCradleMargin="8dp"
        app:layout_anchor="@id/image_photo"
        app:layout_anchorGravity="end"
        app:srcCompat="@drawable/ic_crop_24" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/button_scan"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/scan_photo" />

    <Button
        android:id="@+id/button_scanned_photos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scanned_photos" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>